--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'war'
 	id 'org.springframework.boot' version '3.0.3'
-	id 'org.openapi.generator' version '6.3.0'
+	id 'org.openapi.generator' version '4.3.1'
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -16,6 +16,11 @@ configurations {
 	}
 }
 
+springBoot {
+	mainClass = "com.basic.rest.project.rest.RestApplication"
+}
+sourceSets.main.java.srcDirs = ["$buildDir/generated/src/main/java", "src/main/java"]
+
 repositories {
 	mavenCentral()
 }
@@ -28,6 +33,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.apache.tomcat:tomcat-servlet-api:9.0.37'
+	implementation 'io.swagger:swagger-annotations:1.5.9'
+	implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
+	implementation 'javax.annotation:javax.annotation-api:1.3.2'
+	compileOnly "org.openapitools:jackson-databind-nullable:0.2.1"
+	//compileClasspath "org.openapitools:openapi-generator-gradle-plugin:5.0.0"
 
 }
 
@@ -39,21 +50,29 @@ task deleteOpenAPITools(type: Delete){
 }
 
 
+
 //https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-gradle-plugin
 
-tasks.compileJava.dependsOn tasks.openApiGenerate
+tasks.compileJava.dependsOn tasks.deleteOpenAPITools
 
 openApiGenerate {
 	generatorName = "spring"
 	inputSpec = "$projectDir/src/main/resources/yaml/rest.yaml".toString()
 	outputDir = "$buildDir/generated".toString()
-	apiPackage = "com.basic.rest.project.rest.controllers"
+	apiPackage = "com.basic.rest.project.rest.controller"
 	invokerPackage = "com.basic.rest.project.rest.invoker"
 	modelPackage = "com.basic.rest.project.rest.models"
 	validateSpec = true
+	configOptions = [
+			openApiNullable: "false",
+			delegatePattern: "true"
+	]
 
 
 }
+
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
