--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-	id 'java'
-	id 'war'
 	id 'org.springframework.boot' version '3.0.3'
 	id 'org.openapi.generator' version '4.3.1'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'java'
+	id 'war'
 }
 
 group = 'com.basic.rest.project'
@@ -34,11 +34,12 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.apache.tomcat:tomcat-servlet-api:9.0.37'
-	implementation 'io.swagger:swagger-annotations:1.5.9'
-	implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
+	implementation 'io.swagger:swagger-annotations:1.6.2'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	compileOnly "org.openapitools:jackson-databind-nullable:0.2.1"
-	//compileClasspath "org.openapitools:openapi-generator-gradle-plugin:5.0.0"
+
+
 
 }
 
@@ -65,7 +66,10 @@ openApiGenerate {
 	validateSpec = true
 	configOptions = [
 			openApiNullable: "false",
-			delegatePattern: "true"
+			delegatePattern: "true",
+			dateLibrary: "java17",
+			interfaceOnly: "true"
+
 	]
 
 
