--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -16,15 +16,20 @@ configurations {
 	}
 }
 
+// Defining main class of the project.
 springBoot {
 	mainClass = "com.basic.rest.project.rest.RestApplication"
 }
+
+// Defining source directory.
 sourceSets.main.java.srcDirs = ["$buildDir/generated/src/main/java", "src/main/java"]
 
+// Defining Repository from where the jars/dependencies will get download.
 repositories {
 	mavenCentral()
 }
 
+// Defining the dependencies of the project.
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-artemis'
@@ -38,23 +43,20 @@ dependencies {
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	compileOnly "org.openapitools:jackson-databind-nullable:0.2.1"
-
-
+	//implementation "org.springframework.boot:spring-boot-starter-data-jpa:2.3.4.RELEASE"
+	runtimeOnly "com.h2database:h2:1.4.200"
+	runtimeOnly "org.springframework.boot:spring-boot-devtools"
 
 }
 
-
+//https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-gradle-plugin
 
 task deleteOpenAPITools(type: Delete){
 	def openapitoolsDir = "$buildDir/generated/src/main/java/org/" as File
 	delete openapitoolsDir
 }
 
-
-
-//https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-gradle-plugin
-
-tasks.compileJava.dependsOn tasks.deleteOpenAPITools
+compileJava.dependsOn tasks.deleteOpenAPITools
 
 openApiGenerate {
 	generatorName = "spring"
@@ -69,15 +71,14 @@ openApiGenerate {
 			delegatePattern: "true",
 			dateLibrary: "java17",
 			interfaceOnly: "true"
-
 	]
-
-
 }
-
-
-
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	minHeapSize = "2G"
+	maxHeapSize = "5G"
+
+	failFast = true
 }
