--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-artemis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
@@ -43,9 +44,9 @@ dependencies {
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	compileOnly "org.openapitools:jackson-databind-nullable:0.2.1"
-	//implementation "org.springframework.boot:spring-boot-starter-data-jpa:2.3.4.RELEASE"
-	runtimeOnly "com.h2database:h2:1.4.200"
-	runtimeOnly "org.springframework.boot:spring-boot-devtools"
+	//implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	runtimeOnly "com.h2database:h2"
+	implementation "org.springframework.boot:spring-boot-devtools"
 
 }
 
