Configured H2 console successfully.

--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-artemis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
@@ -46,7 +47,7 @@ dependencies {
 	compileOnly "org.openapitools:jackson-databind-nullable:0.2.1"
 	//implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	runtimeOnly "com.h2database:h2"
-	implementation "org.springframework.boot:spring-boot-devtools"
+
 
 }
 
