--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 
 spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.datasource.generate-unique-name=false
+spring.datasource.url=jdbc:h2:mem:student
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=password
