Configured H2 console successfully.

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.url=jdbc:h2:mem:student
 
 
 # Enable debug logging
-logging.level.web=DEBUG
+#logging.level.web=DEBUG
 #logging.level.com=DEBUG
+logging.level.org=DEBUG
 enableLoggingRequestDetails='false'
