--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '3.0.3'
+	id 'org.springframework.boot' version '2.7.1'
 	id 'org.openapi.generator' version '4.3.1'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'java'
@@ -8,7 +8,8 @@ plugins {
 
 group = 'com.basic.rest.project'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = 17
+targetCompatibility = 17
 
 configurations {
 	compileOnly {
@@ -34,18 +35,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-artemis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+	//implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
+
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	implementation 'org.apache.tomcat:tomcat-servlet-api:9.0.37'
 	implementation 'io.swagger:swagger-annotations:1.6.2'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	compileOnly "org.openapitools:jackson-databind-nullable:0.2.1"
-	//implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	runtimeOnly "com.h2database:h2"
 
 
