--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -3,14 +3,17 @@ server.port=8080
 spring.h2.console.enabled=true
 spring.datasource.generate-unique-name=false
 spring.datasource.url=jdbc:h2:mem:student
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 # Enable debug logging
 #logging.level.web=DEBUG
 #logging.level.com=DEBUG
-logging.level.org=DEBUG
+#logging.level.org=DEBUG
 enableLoggingRequestDetails='false'
