--- a/rest/src/main/resources/yaml/rest.yaml
+++ b/rest/src/main/resources/yaml/rest.yaml
@@ -52,8 +52,12 @@ paths:
               $ref: '#/components/schemas/Student'
         required: true
       responses:
-        '200':
+        '201':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddStudentResponseBody'
   '/collage/student/{id}':
     parameters:
       - schema:
@@ -93,6 +97,12 @@ paths:
       responses:
         '200':
           description: OK
+        '201':
+          description: created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddStudentResponseBody'
 
 
 
@@ -105,6 +115,12 @@ components:
     Code204:
       description: No Content
   schemas:
+    AddStudentResponseBody:
+      title: AddStudentResponseBody
+      type: object
+      properties:
+        id:
+          type: integer
     Student:
       title: Student
       type: object
